<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota_kelompok"
        android:textColor="@color/colorPrimary"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arif_pebriansyah"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diana_rohma"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rayhan_syahrindra"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azry"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>