<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".MainActivity">
        <Button
            android:text="@string/petunjuk_pemesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_fragment"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:id="@+id/frame_layout">

        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukan_nama_anda"
            android:id="@+id/edt_name"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_makanan_minuman"
            android:layout_gravity="center"
            android:textSize="25sp"/>

        <View
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/burger" />

            <CheckBox
                android:id="@+id/burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:text="BURGER PAKDE"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ayam" />

            <CheckBox
                android:id="@+id/ayamgoreng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:text="AYAM GORENG BUDE"
                android:textSize="15sp"
                android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/orange" />

        <CheckBox
            android:id="@+id/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORANGE JUICE PALAPA"
            android:textStyle="bold"
            android:paddingLeft="1dp"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/strawberry" />

        <CheckBox
            android:id="@+id/strawberry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STRAWBERRY JUICE"
            android:textStyle="bold"
            android:paddingLeft="1dp"
            android:textSize="15sp"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jumlah"
            android:textSize="25dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textColor="#212121"
                android:textSize="25dp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/harga"
            android:layout_gravity="center"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_gravity="center"
            android:textColor="#212121"
            android:textSize="25dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="Submitorder"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="PESAN"/>

    </LinearLayout>
</ScrollView>